--- a/src/styles.css
+++ b/src/styles.css
@@ -4,14 +4,16 @@
 }
 
 body {
+    margin: 0;
+    padding: 0;
     background-color:var(--secondary-color);
-    font-family: ;
+    /*font-family: ;*/
 }
 
 .container__wrapper {
     background-color: white;
-    margin: 50px 400px;
-    padding: 40px;
+    margin: 30px 375px;
+    padding: 30px;
     border-radius: 15px;
     box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.142);
 }
@@ -40,28 +42,49 @@ opacity: 0.85;
 
 .city__temp {
 display: flex;
+justify-content: space-between;
+padding: 0;
+}
+
+.current-temp {
+    display: flex;
+}
+
+.city__info {
+    padding: 10px;
+    /*background-color: gray;*/
+}
+
+.city__temp--info {
+    font-size: 20px;
+    line-height: 0.5;
+    opacity: 0.65;
 }
 
 h1 {
-    font-size: 48px;
+    font-size: 84px;
 }
 
 h2 {
-    font-size: 64px;
+    font-size: 36px;
 }
 
- ul {
+ .forecast ul {
 display: flex;
  }
 
  li {
 list-style: none;
+margin: 20px;
+padding: 20px;
+background-color: rgba(128, 128, 128, 0.456);
  }
 
  footer p{
     text-align: center;
     color: rgba(0, 0, 0, 0.516);
- }
+font-size: 16px; 
+}
 
  footer a {
     color:blueviolet;
